FIX: padding style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 .prose p {
-  @apply text-zinc-600 dark:text-zinc-400 leading-7 font-light;
+  @apply text-zinc-400 leading-7 font-light;
 }
 
 .prose a strong {
