FIX: style issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,7 +114,7 @@
 
 /* Prism Styles */
 .prose pre {
-  @apply bg-zinc-900 rounded-xl dark:bg-[#0E0E10] text-zinc-300 overflow-x-auto p-4 border border-zinc-100 dark:border-zinc-300/20;
+  @apply bg-zinc-900 rounded-xl dark:bg-[#0E0E10] text-zinc-300 overflow-x-auto p-4 border border-zinc-300/20;
 }
 
 .rehype-code-title {
