--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,15 +9,15 @@
 }
 
 .prose p {
-  @apply text-zinc-400 leading-7 font-light;
+  @apply text-black leading-7 font-light;
 }
 
 .prose a strong {
   @apply font-normal;
 }
 
-.prose h1 > strong, h2 > strong, h3> strong, h4 > strong, h5 > strong, h6 > strong, p > strong {
-  @apply font-semibold;
+.prose h1, h2, h3, h4, h5  h6 {
+  @apply font-semibold font-display;
 }
 
 .prose :where(p):not(:where([class~=not-prose] *)) {
