add: table of content and hover colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,8 +20,24 @@
   @apply font-semibold font-display text-[#282828] my-4;
 }
 
+.prose h1 {
+  @apply text-3xl leading-8;
+}
+
 .prose h2 {
   @apply text-2xl leading-8;
+}
+
+.prose h3 {
+  @apply text-xl leading-6;
+}
+
+.prose h4 {
+  @apply text-lg leading-5;
+}
+
+.prose h6 {
+  @apply text-base leading-5;
 }
 
 .prose :where(p):not(:where([class~=not-prose] *)) {
