--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,20 +75,33 @@
 .prose :where(ul,ol):not(:where([class~=not-prose] *)) {
   padding-left: 1.5rem;
 }
+
 .prose :where(ol):not(:where([class~=not-prose] *)) {
   list-style-type: decimal;
 }
+
 .prose :where(.prose>*):not(:where([class~=not-prose] *)) {
   @apply mt-8 mb-4;
 }
+
 .prose :where(li):not(:where([class~=not-prose] *)) {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   padding-left: .875rem;
 }
+
+.prose ol {
+  list-style-type: decimal;
+}
+
+.prose ul {
+  list-style-type: disc;
+}
+
 .prose :where(ol>li):not(:where([class~=not-prose] *))::marker {
   color: var(--tw-prose-counters);
 }
+
 .prose :where(li):not(:where([class~=not-prose] *))::marker {
   font-size: .875rem;
   font-weight: 600;
@@ -251,6 +264,6 @@ blockquote {
   @apply border-l-2 border-l-sky-400 pl-4 italic rounded text-sm;
 }
 
-p > code {
+code {
   color: #ef56ad;
 }
