--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,11 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: var(--font-inter), sans-serif;
 }
 
 h1, h2, h3, h4, h5  h6 {
-  font-family: "Rufina", serif;
+  font-family: var(--font-rufina), sans-serif;
   color: #282828;
   font-weight: 600
 }
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5  h6 {
 .prose p {
   color: #1C1E21;
   font-weight: 400;
-  font-family: "Inter", sans-serif;
+  font-family: var(--font-inter), sans-serif;
   line-height: 24px;
   font-size: 14px;
   margin: 1rem 0;
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5  h6 {
 }
 
 .prose h1, h2, h3, h4, h5  h6 {
-  font-family: "Rufina", serif;
+  font-family: var(--font-rufina), sans-serif;
   font-weight: 600;
   color: #282828;
   margin: 1rem 0;
