--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,6 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: var(--font-inter), sans-serif;
-}
-
 h1, h2, h3, h4, h5  h6 {
   font-family: var(--font-fraunces), sans-serif;
   color: #282828;
@@ -19,12 +15,17 @@ h1, h2, h3, h4, h5  h6 {
   letter-spacing: -0.05rem;
 }
 
+.prose :where(h1, h2, h3, h4, h5  h6) {
+  font-weight: 400 !important;
+  margin-top: 4rem !important;
+  margin-bottom: 1rem !important;
+}
+
 .prose p {
   color: #52525B;
   font-weight: 400;
-  font-family: var(--font-inter), sans-serif;
-  line-height: 24px;
-  font-size: 14px;
+  line-height: 28px;
+  font-size: 16px;
   margin: 1rem 0;
 }
 
@@ -32,33 +33,6 @@ h1, h2, h3, h4, h5  h6 {
   font-weight: 400;
 }
 
-.prose h1, h2, h3, h4, h5  h6 {
-  font-family: var(--font-fraunces), sans-serif;
-  color: #282828;
-  margin: 1rem 0;
-  font-weight: 300;
-  letter-spacing: -0.05rem;
-}
-
-.prose h1 {
-  @apply text-3xl leading-8;
-}
-
-.prose h2 {
-  @apply text-2xl leading-8;
-}
-
-.prose h3 {
-  @apply text-xl leading-6;
-}
-
-.prose h4 {
-  @apply text-lg leading-5;
-}
-
-.prose h6 {
-  @apply text-base leading-5;
-}
 
 .prose :where(p):not(:where([class~=not-prose] *)) {
   margin-top: 1.75rem;
@@ -69,16 +43,9 @@ h1, h2, h3, h4, h5  h6 {
   padding-left: 1.5rem;
 }
 
-.prose :where(h2):not(:where([class~=not-prose] *)) {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  margin-top: 5rem;
-  margin-bottom: 1rem;
-}
-
 .prose :where(.prose>*):not(:where([class~=not-prose] *)) {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .prose :where(a):not(:where([class~=not-prose] *)) {
@@ -98,10 +65,6 @@ h1, h2, h3, h4, h5  h6 {
 
 .prose :where(ol):not(:where([class~=not-prose] *)) {
   list-style-type: decimal;
-}
-
-.prose :where(.prose>*):not(:where([class~=not-prose] *)) {
-  @apply mt-8 mb-4;
 }
 
 .prose :where(li):not(:where([class~=not-prose] *)) {
